--- a/usersManagerFront/package.json
+++ b/usersManagerFront/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.63.4",
     "react-native-elements": "^3.0.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-material-kit": "^0.6.0-beta.1",
     "react-native-modal": "^11.5.6",
     "react-native-paper": "^4.5.0",
